[gd_scene load_steps=16 format=3 uid="uid://cshfdqa1eadg1"]

[ext_resource type="Script" path="res://script/Enemy.gd" id="1_aghgl"]
[ext_resource type="Texture2D" uid="uid://byn1n3g7peja1" path="res://addons/explosao.png" id="2_1v1qa"]
[ext_resource type="Texture2D" uid="uid://dtltvsgkimax3" path="res://addons/enemies/run_horizoltal.png" id="2_4mqth"]
[ext_resource type="Script" path="res://script/follow_player.gd" id="3_qd1vo"]
[ext_resource type="Texture2D" uid="uid://ctydqpyh4lutg" path="res://addons/weapons/disparo_enemy2.png" id="4_e83ye"]
[ext_resource type="AudioStream" uid="uid://xmc3w3hpwqtl" path="res://audio/explosion.wav" id="4_pn8hl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d0hxd"]
size = Vector2(10.8178, 22.2204)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_35pja"]
size = Vector2(116.578, 97.6214)

[sub_resource type="Animation" id="Animation_g3g6f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_1v1qa")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hand/weapon:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("audioEnemy:stream")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_pn8hl")]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("audioEnemy:autoplay")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("audioEnemy:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_rnvvw"]
resource_name = "died"
length = 0.32
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_1v1qa")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hand/weapon:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"dead"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("audioEnemy:autoplay")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("audioEnemy:stream")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_pn8hl")]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("audioEnemy:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ev8rd"]
resource_name = "run"
length = 0.32
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_4mqth")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("audioEnemy:stream")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("audioEnemy:autoplay")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Hand/weapon:texture")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_e83ye")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6m16g"]
_data = {
"RESET": SubResource("Animation_g3g6f"),
"died": SubResource("Animation_rnvvw"),
"run": SubResource("Animation_ev8rd")
}

[sub_resource type="Animation" id="Animation_obghi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%weapon:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_w85xy"]
resource_name = "default"
length = 0.22
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%weapon:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fexu8"]
_data = {
"RESET": SubResource("Animation_obghi"),
"default": SubResource("Animation_w85xy")
}

[node name="Enemy1" type="CharacterBody2D" groups=["Enemy"]]
scale = Vector2(1.35543, 1.35543)
script = ExtResource("1_aghgl")

[node name="collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1.46187, -11.1102)
shape = SubResource("RectangleShape2D_d0hxd")
debug_color = Color(0.837331, 0.348823, 0.442358, 0.42)

[node name="texture" type="Sprite2D" parent="."]
position = Vector2(-0.960965, -16.1442)
rotation = 3.14832
scale = Vector2(-1.09968, -1.00753)
texture = ExtResource("2_1v1qa")
hframes = 4

[node name="follow_player" type="Node" parent="."]
script = ExtResource("3_qd1vo")

[node name="hitArea" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="collision" type="CollisionShape2D" parent="hitArea"]
position = Vector2(0.737772, -8.85328)
scale = Vector2(1.01257, 1.07316)
shape = SubResource("RectangleShape2D_35pja")
disabled = true

[node name="animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6m16g")
}
autoplay = "run"

[node name="Hand" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(-0.737773, -9.59105)
scale = Vector2(0.781608, 0.781608)

[node name="weapon" type="Sprite2D" parent="Hand"]
unique_name_in_owner = true
position = Vector2(3.77567, -0.943917)
offset = Vector2(7.67068, -7.37773)
hframes = 3

[node name="weapon_barrel" type="Node2D" parent="Hand"]
unique_name_in_owner = true
position = Vector2(11.327, -0.943917)

[node name="animation_weapon" type="AnimationPlayer" parent="Hand"]
libraries = {
"": SubResource("AnimationLibrary_fexu8")
}

[node name="audioEnemy" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_pn8hl")
autoplay = true
